@@ -23,12 +23,16 @@ import java.io.IOException;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.Optional;
 import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.hive.ql.io.PositionDeleteInfo;
+import org.apache.hadoop.hive.ql.io.RowLineageInfo;
+import org.apache.hadoop.hive.ql.lockmgr.HiveTxnManager;
 import org.apache.hadoop.hive.ql.metadata.VirtualColumn;
+import org.apache.hadoop.hive.ql.session.SessionState;
+import org.apache.hadoop.hive.ql.session.SessionStateUtil;
 import org.apache.iceberg.ContentFile;
 import org.apache.iceberg.MetadataColumns;
 import org.apache.iceberg.PartitionKey;
@@ -36,10 +40,13 @@ import org.apache.iceberg.PartitionSpec;
 import org.apache.iceberg.Schema;
 import org.apache.iceberg.StructLike;
 import org.apache.iceberg.Table;
+import org.apache.iceberg.Transaction;
 import org.apache.iceberg.data.GenericRecord;
 import org.apache.iceberg.data.Record;
 import org.apache.iceberg.deletes.PositionDelete;
+import org.apache.iceberg.hive.HiveTxnCoordinator;
 import org.apache.iceberg.io.CloseableIterator;
+import org.apache.iceberg.mr.mapreduce.RowLineageReader;
 import org.apache.iceberg.relocated.com.google.common.collect.Lists;
 import org.apache.iceberg.relocated.com.google.common.collect.Maps;
 import org.apache.iceberg.types.Types;
@@ -72,6 +79,9 @@ public class IcebergAcidUtil {
     VIRTUAL_COLS_TO_META_COLS.put(VirtualColumn.PARTITION_HASH.getName(), PARTITION_STRUCT_META_COL);
     VIRTUAL_COLS_TO_META_COLS.put(VirtualColumn.FILE_PATH.getName(), MetadataColumns.FILE_PATH);
     VIRTUAL_COLS_TO_META_COLS.put(VirtualColumn.ROW_POSITION.getName(), MetadataColumns.ROW_POSITION);
+    VIRTUAL_COLS_TO_META_COLS.put(VirtualColumn.ROW_LINEAGE_ID.getName(), MetadataColumns.ROW_ID);
+    VIRTUAL_COLS_TO_META_COLS.put(VirtualColumn.LAST_UPDATED_SEQUENCE_NUMBER.getName(),
+        MetadataColumns.LAST_UPDATED_SEQUENCE_NUMBER);
   }
 
   private static final Types.NestedField PARTITION_HASH_META_COL = Types.NestedField.required(
@@ -140,29 +150,6 @@ public class IcebergAcidUtil {
   }
 
   /**
-   * @param dataCols The columns of the original file read schema
-   * @param table The table object - it is used for populating the partition struct meta column
-   * @return The schema for reading files, extended with metadata columns needed for deletes
-   */
-  public static Schema createFileReadSchemaForUpdate(List<Types.NestedField> dataCols, Table table) {
-    List<Types.NestedField> cols = Lists.newArrayListWithCapacity(dataCols.size() + FILE_READ_META_COLS.size());
-    FILE_READ_META_COLS.forEach((metaCol, index) -> {
-      if (metaCol == PARTITION_STRUCT_META_COL) {
-        cols.add(MetadataColumns.metadataColumn(table, MetadataColumns.PARTITION_COLUMN_NAME));
-      } else {
-        cols.add(metaCol);
-      }
-    });
-    // Old column values
-    cols.addAll(dataCols.stream()
-        .map(f -> Types.NestedField.optional(1147483545 + f.fieldId(), "__old_value_for" + f.name(), f.type()))
-        .collect(Collectors.toList()));
-    // New column values
-    cols.addAll(dataCols);
-    return new Schema(cols);
-  }
-
-  /**
    * @param dataCols The columns of the serde projection schema
    * @return The schema for SerDe operations, extended with metadata columns needed for deletes
    */
@@ -172,34 +159,10 @@ public class IcebergAcidUtil {
     // Old column values
     cols.addAll(dataCols.stream()
         .map(f -> Types.NestedField.optional(1147483545 + f.fieldId(), "__old_value_for_" + f.name(), f.type()))
-        .collect(Collectors.toList()));
+        .toList());
     // New column values
     cols.addAll(dataCols);
     return new Schema(cols);
-  }
-
-  /**
-   * Get the original record from the updated record. Populate the `original` with the filed values from `rec`.
-   * @param rec The record read by the file scan task, which contains both the metadata fields and the row data fields
-   * @param original The record object to populate. The end result is the original record before the update.
-   */
-  public static void populateWithOriginalValues(Record rec, Record original) {
-    int dataOffset = SERDE_META_COLS.size();
-    for (int i = dataOffset; i < dataOffset + original.size(); ++i) {
-      original.set(i - dataOffset, rec.get(i));
-    }
-  }
-
-  /**
-   * Get the new record from the updated record. Populate the `newRecord` with the filed values from `rec`.
-   * @param rec The record read by the file scan task, which contains both the metadata fields and the row data fields
-   * @param newRecord The record object to populate. The end result is the new record after the update.
-   */
-  public static void populateWithNewValues(Record rec, Record newRecord) {
-    int dataOffset = SERDE_META_COLS.size() + newRecord.size();
-    for (int i = dataOffset; i < dataOffset + newRecord.size(); ++i) {
-      newRecord.set(i - dataOffset, rec.get(i));
-    }
   }
 
   public static int parseSpecId(Record rec) {
@@ -261,28 +224,49 @@ public class IcebergAcidUtil {
     }
   }
 
-  public static void setPositionDeleteInfo(Configuration conf, int specId, long partitionHash,
-      String filePath, long filePos, String partProjection) {
-    PositionDeleteInfo.setIntoConf(conf, specId, partitionHash, filePath, filePos, partProjection);
+  public static Transaction getOrCreateTransaction(Table table, Configuration conf) {
+    HiveTxnManager txnManager = Optional.ofNullable(SessionState.get())
+        .map(SessionState::getTxnMgr).orElse(null);
+    if (txnManager == null) {
+      return table.newTransaction();
+    }
+    boolean isExplicitTxnOpen = txnManager.isTxnOpen() && !txnManager.isImplicitTransactionOpen(null);
+    int outputCount = SessionStateUtil.getOutputTableCount(conf)
+        .orElse(1);
+
+    if (!isExplicitTxnOpen && outputCount < 2) {
+      return table.newTransaction();
+    }
+    HiveTxnCoordinator txnCoordinator = txnManager.getOrSetTxnCoordinator(
+        HiveTxnCoordinator.class, msClient -> new HiveTxnCoordinator(conf, msClient));
+    return txnCoordinator != null ?
+        txnCoordinator.getOrCreateTransaction(table) : table.newTransaction();
+  }
+
+  public static Transaction getTransaction(Table table) {
+    HiveTxnManager txnManager = Optional.ofNullable(SessionState.get())
+        .map(SessionState::getTxnMgr).orElse(null);
+    if (txnManager == null) {
+      return null;
+    }
+    HiveTxnCoordinator txnCoordinator = txnManager.getOrSetTxnCoordinator(
+        HiveTxnCoordinator.class, null);
+    return txnCoordinator != null ?
+        txnCoordinator.getTransaction(table) : null;
   }
 
   public static class VirtualColumnAwareIterator<T> implements CloseableIterator<T> {
 
     private final CloseableIterator<T> currentIterator;
-
-    private GenericRecord current;
-    private final Schema expectedSchema;
+    private final GenericRecord current;
     private final Configuration conf;
-    private final Table table;
 
-    public VirtualColumnAwareIterator(CloseableIterator<T> currentIterator, Schema expectedSchema, Configuration conf,
-                                      Table table) {
+    public VirtualColumnAwareIterator(
+        CloseableIterator<T> currentIterator, Schema expectedSchema, Configuration conf) {
       this.currentIterator = currentIterator;
-      this.expectedSchema = expectedSchema;
+      this.current = GenericRecord.create(
+          new Schema(expectedSchema.columns().subList(4, expectedSchema.columns().size())));
       this.conf = conf;
-      current = GenericRecord.create(
-              new Schema(expectedSchema.columns().subList(4, expectedSchema.columns().size())));
-      this.table = table;
     }
 
     @Override
@@ -306,6 +290,8 @@ public class IcebergAcidUtil {
           IcebergAcidUtil.parseFilePath(rec),
           IcebergAcidUtil.parseFilePosition(rec),
           StringUtils.EMPTY);
+      RowLineageInfo.setRowLineageInfoIntoConf(RowLineageReader.readRowId(rec),
+          RowLineageReader.readLastUpdatedSequenceNumber(rec), conf);
       return (T) current;
     }
   }
@@ -313,18 +299,13 @@ public class IcebergAcidUtil {
   public static class MergeTaskVirtualColumnAwareIterator<T> implements CloseableIterator<T> {
 
     private final CloseableIterator<T> currentIterator;
-    private GenericRecordBuilder<T> recordBuilder;
-    private final Schema expectedSchema;
-    private final Configuration conf;
+    private final GenericRecordBuilder<T> recordBuilder;
     private final PartitionSpec partitionSpec;
     private final StructLike partition;
 
-    public MergeTaskVirtualColumnAwareIterator(CloseableIterator<T> currentIterator,
-                                           Schema expectedSchema, Configuration conf, ContentFile contentFile,
-                                           Table table) {
+    public MergeTaskVirtualColumnAwareIterator(
+        CloseableIterator<T> currentIterator, Schema expectedSchema, ContentFile<?> contentFile, Table table) {
       this.currentIterator = currentIterator;
-      this.expectedSchema = expectedSchema;
-      this.conf = conf;
       this.partition = contentFile.partition();
       this.recordBuilder = new GenericRecordBuilder<>(
           new Schema(expectedSchema.columns().subList(0, expectedSchema.columns().size())));
