@@ -26,13 +26,11 @@ import java.util.List;
 import java.util.Map;
 
 import com.google.common.primitives.Longs;
-import org.apache.commons.lang3.StringUtils;
 import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.hive.common.StatsSetupConst;
 import org.apache.hadoop.hive.common.ValidTxnList;
 import org.apache.hadoop.hive.common.type.HiveDecimal;
 import org.apache.hadoop.hive.conf.HiveConf;
-import org.apache.hadoop.hive.metastore.StatObjectConverter;
 import org.apache.hadoop.hive.metastore.TableType;
 import org.apache.hadoop.hive.metastore.api.AggrStats;
 import org.apache.hadoop.hive.metastore.api.ColumnStatisticsData;
@@ -76,7 +74,7 @@ public class DescTableOperation extends DDLOperation<DescTableDesc> {
   @Override
   public int execute() throws Exception {
     Table table = getTable();
-    Partition part = getPartition(table);
+    Partition part = desc.getPartition();
     final String dbTableName = desc.getDbTableName();
 
     try (DataOutputStream outStream = ShowUtils.getOutputStream(new Path(desc.getResFile()), context)) {
@@ -123,18 +121,6 @@ public class DescTableOperation extends DDLOperation<DescTableDesc> {
       throw new HiveException(ErrorMsg.INVALID_TABLE, desc.getDbTableName());
     }
     return table;
-  }
-
-  private Partition getPartition(Table table) throws HiveException {
-    Partition part = null;
-    if (desc.getPartitionSpec() != null) {
-      part = context.getDb().getPartition(table, desc.getPartitionSpec(), false);
-      if (part == null) {
-        throw new HiveException(ErrorMsg.INVALID_PARTITION,
-            StringUtils.join(desc.getPartitionSpec().keySet(), ','), desc.getDbTableName());
-      }
-    }
-    return part;
   }
 
   private Deserializer getDeserializer(Table table) throws SQLException {
@@ -208,24 +194,25 @@ public class DescTableOperation extends DDLOperation<DescTableDesc> {
     List<String> colNames = Lists.newArrayList(colName.toLowerCase());
 
     if (part == null) {
-      if (table.isPartitioned() && StatsUtils.checkCanProvidePartitionStats(table)) {
+      if (table.isPartitioned() && StatsUtils.checkCanProvideColumnStats(table)) {
         Map<String, String> tableProps = table.getParameters() == null ?
             new HashMap<>() : table.getParameters();
-        if (table.isPartitionKey(colNames.get(0))) {
+        if (table.isPartitionKey(colNames.getFirst())) {
           getColumnDataForPartitionKeyColumn(table, cols, colStats, colNames, tableProps);
         } else {
-          getColumnsForNotPartitionKeyColumn(table, cols, colStats, deserializer, colNames, tableProps);
+          getColumnsForNotPartitionKeyColumn(table, cols, colStats, deserializer, colName,
+              tableProps);
         }
         table.setParameters(tableProps);
       } else {
-        cols.addAll(Hive.getFieldsFromDeserializer(desc.getColumnPath(), deserializer, context.getConf()));
+        cols.addAll(getFilteredFieldsFromDeserializer(table, deserializer, colName));
         colStats.addAll(context.getDb().getTableColumnStatistics(table, colNames, false));
       }
     } else {
       List<String> partitions = new ArrayList<>();
       String partName = part.getName();
       partitions.add(partName);
-      cols.addAll(Hive.getFieldsFromDeserializer(desc.getColumnPath(), deserializer, context.getConf()));
+      cols.addAll(getFilteredFieldsFromDeserializer(table, deserializer, colName));
       Map<String, List<ColumnStatisticsObj>> partitionColumnStatistics = context.getDb().getPartitionColumnStatistics(
           table.getDbName(), table.getTableName(), partitions, colNames, false);
       List<ColumnStatisticsObj> partitionColStat = partitionColumnStatistics.get(partName);
@@ -235,10 +222,27 @@ public class DescTableOperation extends DDLOperation<DescTableDesc> {
     }
   }
 
+  private List<FieldSchema> getFilteredFieldsFromDeserializer(Table table, Deserializer deserializer,
+      String targetColName) throws HiveException {
+    List<FieldSchema> allFields = Hive.getFieldsFromDeserializer(table.getTableName(), deserializer, context.getConf());
+    List<FieldSchema> filteredFields = new ArrayList<>();
+    
+    for (FieldSchema field : allFields) {
+      if (field.getName() != null && targetColName.equalsIgnoreCase(field.getName())) {
+        // The ObjectInspector normalizes column names to lowercase.
+        // To ensure the column name casing is same as in query, setting it back.
+        field.setName(targetColName);
+        filteredFields.add(field);
+      }
+    }
+    
+    return filteredFields;
+  }
+
   private void getColumnDataForPartitionKeyColumn(Table table, List<FieldSchema> cols,
       List<ColumnStatisticsObj> colStats, List<String> colNames, Map<String, String> tableProps)
       throws HiveException, MetaException {
-    FieldSchema partCol = table.getPartColByName(colNames.get(0));
+    FieldSchema partCol = table.getPartColByName(colNames.getFirst());
     cols.add(partCol);
     PartitionIterable parts = new PartitionIterable(context.getDb(), table, null,
         MetastoreConf.getIntVar(context.getConf(), MetastoreConf.ConfVars.BATCH_RETRIEVE_MAX));
@@ -246,30 +250,25 @@ public class DescTableOperation extends DDLOperation<DescTableDesc> {
         TypeInfoUtils.getTypeInfoFromTypeString(partCol.getType()), null, false);
     ColStatistics cs = StatsUtils.getColStatsForPartCol(ci, parts, context.getConf());
     ColumnStatisticsData data = new ColumnStatisticsData();
-    ColStatistics.Range r = cs.getRange();
-    StatObjectConverter.fillColumnStatisticsData(partCol.getType(), data, r == null ? null : r.minValue,
-        r == null ? null : r.maxValue, r == null ? null : r.minValue, r == null ? null : r.maxValue,
-        r == null ? null : r.minValue.toString(), r == null ? null : r.maxValue.toString(),
-        cs.getNumNulls(), cs.getCountDistint(), null, null, cs.getAvgColLen(),
-        cs.getAvgColLen(), cs.getNumTrues(), cs.getNumFalses());
+    StatsUtils.fillColumnStatisticsData(data, cs, partCol.getType());
     ColumnStatisticsObj cso = new ColumnStatisticsObj(partCol.getName(), partCol.getType(), data);
     colStats.add(cso);
     StatsSetupConst.setColumnStatsState(tableProps, colNames);
   }
 
   private void getColumnsForNotPartitionKeyColumn(Table table, List<FieldSchema> cols, List<ColumnStatisticsObj> colStats,
-      Deserializer deserializer, List<String> colNames, Map<String, String> tableProps)
+      Deserializer deserializer, String colName, Map<String, String> tableProps)
       throws HiveException {
-    cols.addAll(Hive.getFieldsFromDeserializer(desc.getColumnPath(), deserializer, context.getConf()));
+    cols.addAll(getFilteredFieldsFromDeserializer(table, deserializer, colName));
     List<String> parts = context.getDb().getPartitionNames(table, (short) -1);
-    
-    AggrStats aggrStats = context.getDb().getAggrColStatsFor(table, colNames, parts, false);
+    AggrStats aggrStats = context.getDb().getAggrColStatsFor(table, Lists.newArrayList(colName.toLowerCase()),
+        parts, false);
     colStats.addAll(aggrStats.getColStats());
     
     if (parts.size() == aggrStats.getPartsFound()) {
-      StatsSetupConst.setColumnStatsState(tableProps, colNames);
+      StatsSetupConst.setColumnStatsState(tableProps, Lists.newArrayList(colName.toLowerCase()));
     } else {
-      StatsSetupConst.removeColumnStatsState(tableProps, colNames);
+      StatsSetupConst.removeColumnStatsState(tableProps, Lists.newArrayList(colName.toLowerCase()));
     }
   }
 
@@ -291,9 +290,8 @@ public class DescTableOperation extends DDLOperation<DescTableDesc> {
 
   private void setConstraintsAndStorageHandlerInfo(Table table) throws HiveException {
     if (desc.isExtended() || desc.isFormatted()) {
-      TableConstraintsInfo tableConstraintsInfo = context.getDb()
-          .getTableConstraints(table.getDbName(), table.getTableName(), false, false,
-              table.getTTable() != null ? table.getTTable().getId() : -1);
+      TableConstraintsInfo tableConstraintsInfo = context.getDb().getTableConstraints(
+          table.getDbName(), table.getTableName(), false, false);
       table.setTableConstraintsInfo(tableConstraintsInfo);
       table.setStorageHandlerInfo(context.getDb().getStorageHandlerInfo(table));
     }
